# contoso

./: .gitignore  CLAUDE.md  Makefile  contoso-ansible-prompt.docx  contoso-ansible-prompt.md  docker-compose.yml
ansible/: ansible.cfg  provision.yml  requirements.txt  requirements.yml  site.yml
backend/: .dockerignore  .env.example  Dockerfile  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
backend/app/: database.py  dependencies.py  main.py  models.py  repositories.py  schemas.py  services.py
backend/app/core/: exceptions.py  security.py  storage.py
backend/app/models/: __init__.py  address.py  category.py  customer.py  enums.py  order.py  order_item.py  payment.py  product.py  shipment.py  user.py
backend/app/repositories/: __init__.py  base.py  customer_repository.py  order_item_repository.py  order_repository.py  user_repository.py
backend/app/routers/: auth.py  chat.py  crud.py  resources.py  storefront.py  uploads.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  checkout_service.py  crud_service.py  order_query_service.py  registration_service.py
backend/tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_chat_service.py  test_chat_websocket.py  test_checkout_service.py  test_crud_routes.py  test_crud_service.py  test_order_query_service.py  test_registration_service.py  test_repositories.py  test_security.py  test_storefront_routes.py  test_uploads.py
e2e/: pyproject.toml
frontend/: index.html  package-lock.json  package.json
k8s/: README.md  backend.yaml  configmap.yaml  (+5 more)
(+41 files in other folders)
